--- a/MyWardrobeAppServer/package.json
+++ b/MyWardrobeAppServer/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
+    "psql": "^0.0.1",
     "sequelize": "^6.37.7",
     "supertest": "^7.1.4"
   },
