--- a/MyWardrobeAppServer/package.json
+++ b/MyWardrobeAppServer/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/AuliaFHanif/MyWardrobeApp#readme",
   "dependencies": {
+    "@google/genai": "^1.33.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
