--- a/MyWardrobeAppServer/package.json
+++ b/MyWardrobeAppServer/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,7 @@
   "homepage": "https://github.com/AuliaFHanif/MyWardrobeApp#readme",
   "dependencies": {
     "@google/genai": "^1.33.0",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
@@ -30,12 +33,13 @@
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "psql": "^0.0.1",
-    "sequelize": "^6.37.7",
-    "supertest": "^7.1.4"
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "@jest/globals": "^30.2.0",
     "jest": "^30.2.0",
     "nodemon": "^3.1.11",
-    "sequelize-cli": "^6.6.3"
+    "sequelize-cli": "^6.6.3",
+    "supertest": "^7.1.4"
   }
 }
